결제 정보 데이터 반영/ 신청현황 테이블 구조 수정

--- a/woorischool/Views/Parents/ModalViews/CourseRegistrationViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/CourseRegistrationViewController.xib
@@ -51,7 +51,7 @@
                     </constraints>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="epy-F0-6HJ">
-                    <rect key="frame" x="0.0" y="45" width="414" height="817"/>
+                    <rect key="frame" x="0.0" y="45" width="414" height="772"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9MR-8N-VGw">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="699.5"/>
@@ -581,6 +581,7 @@
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="KwY-zy-5sW" secondAttribute="bottom" id="3dT-AU-AMi"/>
                 <constraint firstItem="VyJ-Yd-5Sm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="48A-Lv-eci"/>
+                <constraint firstItem="VyJ-Yd-5Sm" firstAttribute="top" secondItem="epy-F0-6HJ" secondAttribute="bottom" id="EPu-wb-pVK"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="epy-F0-6HJ" secondAttribute="trailing" id="FF7-YX-zTe"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="VyJ-Yd-5Sm" secondAttribute="trailing" id="Ibc-t9-NFS"/>
                 <constraint firstItem="eGh-Si-FAa" firstAttribute="bottom" secondItem="VyJ-Yd-5Sm" secondAttribute="top" constant="17" id="Qgr-cJ-XnR"/>
@@ -593,7 +594,6 @@
                 <constraint firstItem="epy-F0-6HJ" firstAttribute="top" secondItem="96D-2F-Y1R" secondAttribute="bottom" id="gBV-eJ-sHP"/>
                 <constraint firstItem="epy-F0-6HJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jBP-f1-JGm"/>
                 <constraint firstItem="KwY-zy-5sW" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="mDT-4q-IPj"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="epy-F0-6HJ" secondAttribute="bottom" id="rGH-IB-9dG"/>
                 <constraint firstItem="KwY-zy-5sW" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="vM7-Xl-5gF"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eGh-Si-FAa" secondAttribute="trailing" id="vxj-cl-ojD"/>
                 <constraint firstItem="U3N-7I-Dos" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="w2t-2E-501"/>
