--- a/woorischool/Views/Parents/PopupViews/ClassInfoPopupViewController.xib
+++ b/woorischool/Views/Parents/PopupViews/ClassInfoPopupViewController.xib
@@ -38,7 +38,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mek-VC-00f">
-                    <rect key="frame" x="17" y="223" width="380" height="450.5"/>
+                    <rect key="frame" x="17" y="239.5" width="380" height="417"/>
                     <subviews>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95q-Wz-gwi" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="12" y="20" width="356" height="47"/>
@@ -56,7 +56,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dzG-qG-PMz">
-                            <rect key="frame" x="16" y="67" width="348" height="232.5"/>
+                            <rect key="frame" x="16" y="67" width="348" height="199"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0tH-uD-vec">
                                     <rect key="frame" x="0.0" y="0.0" width="348" height="63"/>
@@ -233,10 +233,10 @@
                                     </constraints>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="GMv-9W-egv">
-                                    <rect key="frame" x="0.0" y="128" width="348" height="104.5"/>
+                                    <rect key="frame" x="0.0" y="128" width="348" height="71"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6mN-h5-2vo">
-                                            <rect key="frame" x="0.0" y="0.0" width="116" height="104.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="116" height="71"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8zB-2y-SJm">
                                                     <rect key="frame" x="47.5" y="13" width="21" height="14"/>
@@ -244,8 +244,8 @@
                                                     <color key="textColor" name="brownGrey"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="13:00-13:40" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="dJD-Wu-6h3">
-                                                    <rect key="frame" x="0.0" y="27" width="116" height="66.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="13:00-13:40" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="dJD-Wu-6h3">
+                                                    <rect key="frame" x="0.0" y="27" width="116" height="44"/>
                                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -253,12 +253,13 @@
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="dJD-Wu-6h3" secondAttribute="bottom" constant="11" id="5Ea-I2-vjy"/>
+                                                <constraint firstAttribute="bottom" secondItem="dJD-Wu-6h3" secondAttribute="bottom" id="5Ea-I2-vjy"/>
                                                 <constraint firstItem="dJD-Wu-6h3" firstAttribute="top" secondItem="8zB-2y-SJm" secondAttribute="bottom" id="CAF-8L-LIz"/>
                                                 <constraint firstItem="8zB-2y-SJm" firstAttribute="top" secondItem="6mN-h5-2vo" secondAttribute="top" constant="13" id="CNB-jE-WIK"/>
                                                 <constraint firstItem="dJD-Wu-6h3" firstAttribute="leading" secondItem="6mN-h5-2vo" secondAttribute="leading" id="DiE-j5-VLr"/>
                                                 <constraint firstItem="8zB-2y-SJm" firstAttribute="centerX" secondItem="6mN-h5-2vo" secondAttribute="centerX" id="Qq4-fS-XMl"/>
                                                 <constraint firstAttribute="trailing" secondItem="dJD-Wu-6h3" secondAttribute="trailing" id="huw-Ne-9gG"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="63" id="u96-mP-uVz"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dOb-kM-WNr">
@@ -310,6 +311,10 @@
                                             </constraints>
                                         </view>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="6mN-h5-2vo" firstAttribute="top" secondItem="GMv-9W-egv" secondAttribute="top" id="GAv-ap-e49"/>
+                                        <constraint firstAttribute="bottom" secondItem="6mN-h5-2vo" secondAttribute="bottom" id="cyB-eo-eKH"/>
+                                    </constraints>
                                 </stackView>
                             </subviews>
                             <constraints>
@@ -320,7 +325,7 @@
                             </constraints>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dvG-6p-3C3" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                            <rect key="frame" x="18" y="309.5" width="344" height="50"/>
+                            <rect key="frame" x="18" y="276" width="344" height="50"/>
                             <color key="backgroundColor" name="whiteTwo"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="M5W-QA-Sjc"/>
@@ -343,7 +348,7 @@
                             </userDefinedRuntimeAttributes>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y6z-Wc-cxn">
-                            <rect key="frame" x="18" y="384.5" width="344" height="50"/>
+                            <rect key="frame" x="18" y="351" width="344" height="50"/>
                             <color key="backgroundColor" name="greenishTeal"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="a2P-3n-yxf"/>
