알람목록 스크롤시 네비바 사라지도록 처리/ 시간표 서버 데이터 반영/ 스플래시에서 이름, 자녀등록 등이 처리 되었는지 여부에 따른 첫화면 전환/ 공지목록/ 공지상세/ 약관동의처리/

--- a/woorischool/Cells/VIews/NotiTableViewCell.xib
+++ b/woorischool/Cells/VIews/NotiTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -66,6 +66,11 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="createTimeLabel" destination="hGo-gU-Wjq" id="FlZ-Z1-0DB"/>
+                <outlet property="isNewImageView" destination="BYO-Zb-ueR" id="Kx4-gS-Mmr"/>
+                <outlet property="titleLabel" destination="8Hq-GO-sxe" id="0Fx-HE-5zz"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="121.875"/>
         </tableViewCell>
     </objects>
