--- a/woorischool/Cells/VIews/HomeScheduleTableViewCell.xib
+++ b/woorischool/Cells/VIews/HomeScheduleTableViewCell.xib
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="NotoSansCJKkr-Medium.otf">
+            <string>NotoSansCJKkr-Medium</string>
+        </array>
         <array key="NotoSansCJKkr-Regular.otf">
             <string>NotoSansCJKkr-Regular</string>
         </array>
@@ -22,23 +25,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gka-P8-RQV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="Gka-P8-RQV">
+                        <rect key="frame" x="0.0" y="62.5" width="320" height="12"/>
+                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="8"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="7yt-Nb-iYY">
+                        <rect key="frame" x="0.0" y="74.5" width="320" height="12"/>
+                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="8"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="Ym4-mB-0sC">
+                        <rect key="frame" x="0.0" y="86.5" width="320" height="12"/>
                         <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="8"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Gka-P8-RQV" secondAttribute="bottom" id="R1a-mu-5Z7"/>
+                    <constraint firstAttribute="trailing" secondItem="Ym4-mB-0sC" secondAttribute="trailing" id="2UO-8Z-B8F"/>
+                    <constraint firstItem="Ym4-mB-0sC" firstAttribute="top" secondItem="7yt-Nb-iYY" secondAttribute="bottom" id="9ow-o4-8HQ"/>
+                    <constraint firstItem="7yt-Nb-iYY" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="B2c-Tz-Xp0"/>
                     <constraint firstItem="Gka-P8-RQV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="UAF-L4-YSu"/>
-                    <constraint firstItem="Gka-P8-RQV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="awG-e2-aT4"/>
+                    <constraint firstItem="Ym4-mB-0sC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="aam-lz-dqa"/>
+                    <constraint firstItem="7yt-Nb-iYY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hGp-e3-QPo"/>
+                    <constraint firstItem="7yt-Nb-iYY" firstAttribute="top" secondItem="Gka-P8-RQV" secondAttribute="bottom" id="hYp-L2-jgp"/>
                     <constraint firstAttribute="trailing" secondItem="Gka-P8-RQV" secondAttribute="trailing" id="tAI-sM-660"/>
+                    <constraint firstAttribute="trailing" secondItem="7yt-Nb-iYY" secondAttribute="trailing" id="vlz-53-ha8"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="classNameLabel" destination="Ym4-mB-0sC" id="Llz-Jc-srC"/>
                 <outlet property="eduTimeLabel" destination="Gka-P8-RQV" id="di1-Iv-ZM2"/>
+                <outlet property="lectureNameLabel" destination="7yt-Nb-iYY" id="6UI-do-uVa"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="132.92410714285714"/>
         </tableViewCell>
