--- a/woorischool/Cells/VIews/RegistedClassTableViewCell.xib
+++ b/woorischool/Cells/VIews/RegistedClassTableViewCell.xib
@@ -27,7 +27,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zMY-JW-EgD" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="416" height="179"/>
+                        <rect key="frame" x="0.0" y="0.0" width="416" height="221.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="courseIcon1" translatesAutoresizingMaskIntoConstraints="NO" id="UsA-UH-Evv">
                                 <rect key="frame" x="16" y="9" width="32" height="32"/>
@@ -173,7 +173,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gv4-Xc-x4q" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                                <rect key="frame" x="22" y="135.5" width="88" height="33"/>
+                                <rect key="frame" x="22" y="178" width="88" height="33"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="hxY-9v-Mj2"/>
                                     <constraint firstAttribute="width" constant="88" id="lT5-CN-3Fy"/>
@@ -198,19 +198,19 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="대기순위" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndH-TE-3Vi">
-                                <rect key="frame" x="314" y="141.5" width="62.5" height="21"/>
+                                <rect key="frame" x="314" y="184" width="62.5" height="21"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="18"/>
                                 <color key="textColor" name="greyishBrown"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wug-gc-dui">
-                                <rect key="frame" x="384.5" y="141.5" width="10.5" height="21"/>
+                                <rect key="frame" x="384.5" y="184" width="10.5" height="21"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="18"/>
                                 <color key="textColor" name="grapefruit"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FEq-Dc-1Qt" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                                <rect key="frame" x="231" y="133" width="173" height="38"/>
+                                <rect key="frame" x="231" y="175.5" width="173" height="38"/>
                                 <color key="backgroundColor" name="greenishTeal"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="diI-cy-YFP"/>
@@ -230,14 +230,39 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="신청이 완료되었습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CjL-AI-Jpj">
-                                <rect key="frame" x="271" y="144" width="125" height="16.5"/>
+                                <rect key="frame" x="271" y="186.5" width="125" height="16.5"/>
                                 <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                 <color key="textColor" name="brownGrey"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQZ-Cu-diF" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
+                                <rect key="frame" x="20" y="130" width="376" height="40.5"/>
+                                <color key="backgroundColor" name="grapefruit10"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="grapefruit"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="topInset">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="bottomInset">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="leftInset">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="rightInset">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="FEq-Dc-1Qt" firstAttribute="top" secondItem="MQZ-Cu-diF" secondAttribute="bottom" constant="5" id="6Di-X7-0zb"/>
                             <constraint firstAttribute="trailing" secondItem="CjL-AI-Jpj" secondAttribute="trailing" constant="20" id="7zu-2c-ALO"/>
                             <constraint firstItem="gkg-qQ-2fh" firstAttribute="centerY" secondItem="UsA-UH-Evv" secondAttribute="centerY" id="B4K-yJ-Clb"/>
                             <constraint firstItem="Gv4-Xc-x4q" firstAttribute="centerY" secondItem="FEq-Dc-1Qt" secondAttribute="centerY" id="BlR-s3-JGK"/>
@@ -246,11 +271,12 @@
                             <constraint firstAttribute="trailing" secondItem="lEO-Ih-9Bv" secondAttribute="trailing" id="DdN-SC-AUE"/>
                             <constraint firstItem="Gv4-Xc-x4q" firstAttribute="leading" secondItem="zMY-JW-EgD" secondAttribute="leading" constant="22" id="Dpm-O0-wBe"/>
                             <constraint firstItem="wug-gc-dui" firstAttribute="centerY" secondItem="FEq-Dc-1Qt" secondAttribute="centerY" id="Eub-1M-75E"/>
+                            <constraint firstItem="MQZ-Cu-diF" firstAttribute="leading" secondItem="zMY-JW-EgD" secondAttribute="leading" constant="20" id="Hqi-PS-gCu"/>
                             <constraint firstAttribute="trailing" secondItem="FEq-Dc-1Qt" secondAttribute="trailing" constant="12" id="KF6-Kp-OyG"/>
                             <constraint firstItem="wug-gc-dui" firstAttribute="leading" secondItem="ndH-TE-3Vi" secondAttribute="trailing" constant="8" id="KZB-Q6-DEi"/>
+                            <constraint firstAttribute="trailing" secondItem="MQZ-Cu-diF" secondAttribute="trailing" constant="20" id="LQE-aa-Azp"/>
                             <constraint firstItem="gjP-ll-48o" firstAttribute="centerY" secondItem="UsA-UH-Evv" secondAttribute="centerY" id="QWI-bV-nvI"/>
                             <constraint firstItem="rrV-0n-c7x" firstAttribute="leading" secondItem="zMY-JW-EgD" secondAttribute="leading" id="V4g-sC-VFf"/>
-                            <constraint firstItem="FEq-Dc-1Qt" firstAttribute="top" secondItem="lEO-Ih-9Bv" secondAttribute="bottom" constant="8" id="bMN-aC-T5P"/>
                             <constraint firstItem="CjL-AI-Jpj" firstAttribute="centerY" secondItem="Gv4-Xc-x4q" secondAttribute="centerY" id="cfS-yp-XkC"/>
                             <constraint firstItem="lEO-Ih-9Bv" firstAttribute="leading" secondItem="zMY-JW-EgD" secondAttribute="leading" id="fbI-P2-3Lu"/>
                             <constraint firstItem="gjP-ll-48o" firstAttribute="leading" secondItem="UsA-UH-Evv" secondAttribute="trailing" constant="5" id="hhW-yZ-0TU"/>
@@ -260,6 +286,7 @@
                             <constraint firstItem="UsA-UH-Evv" firstAttribute="leading" secondItem="zMY-JW-EgD" secondAttribute="leading" constant="16" id="kr3-ho-ixQ"/>
                             <constraint firstItem="7yX-nO-4ff" firstAttribute="centerY" secondItem="UsA-UH-Evv" secondAttribute="centerY" id="mOh-ck-Zyb"/>
                             <constraint firstAttribute="trailing" secondItem="wug-gc-dui" secondAttribute="trailing" constant="21" id="mPg-Yc-VKM"/>
+                            <constraint firstItem="MQZ-Cu-diF" firstAttribute="top" secondItem="lEO-Ih-9Bv" secondAttribute="bottom" constant="5" id="mcI-hb-L72"/>
                             <constraint firstAttribute="trailing" secondItem="rrV-0n-c7x" secondAttribute="trailing" id="rSq-fS-zKa"/>
                             <constraint firstItem="lEO-Ih-9Bv" firstAttribute="top" secondItem="rrV-0n-c7x" secondAttribute="bottom" constant="15" id="sNE-Wt-Ht6"/>
                             <constraint firstItem="UsA-UH-Evv" firstAttribute="top" secondItem="zMY-JW-EgD" secondAttribute="top" constant="9" id="v98-hi-RmI"/>
@@ -293,6 +320,7 @@
                 <outlet property="classNameLabel" destination="gkg-qQ-2fh" id="IeN-Bi-zfh"/>
                 <outlet property="classTimeLabel" destination="OfZ-uH-IAM" id="3mY-gd-nLd"/>
                 <outlet property="countLabel" destination="wug-gc-dui" id="cP4-ha-jBj"/>
+                <outlet property="expireTimeWarningLabel" destination="MQZ-Cu-diF" id="teb-oi-4tt"/>
                 <outlet property="nameLabel" destination="gjP-ll-48o" id="OGt-Pl-w9t"/>
                 <outlet property="priceLabel" destination="V45-zG-WSn" id="gzc-ls-X3P"/>
                 <outlet property="readyTitleLabel" destination="ndH-TE-3Vi" id="ek5-Zb-fjA"/>
@@ -311,6 +339,9 @@
         </namedColor>
         <namedColor name="grapefruit">
             <color red="0.94901960784313721" green="0.40392156862745099" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="grapefruit10">
+            <color red="0.94900000095367432" green="0.40400001406669617" blue="0.3919999897480011" alpha="0.10000000149011612" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="greenishTeal">
             <color red="0.17254901960784313" green="0.77647058823529413" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
