--- a/woorischool/Cells/VIews/SPHomeClassInfoCollectionViewCell.xib
+++ b/woorischool/Cells/VIews/SPHomeClassInfoCollectionViewCell.xib
@@ -89,7 +89,7 @@
                                         <color key="textColor" name="dodgerBlue"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="n.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="94e-tg-8Jh">
+                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="n.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="94e-tg-8Jh">
                                         <rect key="frame" x="246" y="8" width="16" height="15"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" name="grapefruit"/>
